Updating project name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 
 title: [Rapid7 Documentation Style Guide]
+project: [Docs Style Guide]
 description: [Learn how to write stuff. And make it look good.]
