--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: [Rapid7 Documentation Style Guide]
+title: [Rapid7 Docs Style Guide]
 description: [Learn how to write stuff. And make it look good.]
